test: intial testing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,5 +44,5 @@
   },
   "remoteUser": "root",
   "containerUser": "vscode",
-  "postAttachCommand": "pip3 install --user -r requirements.txt"
+  "postAttachCommand": ["pip3 install --user -r requirements.txt"]
 }
