--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -24,6 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov genbadge[all]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Build midea-local
+        run: |
+          python build
+          pip install dist/midea_local*.whl
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
