--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,7 +38,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --output-file ./reports/flake8/flake8stats.txt
       - name: Test with pytest
         run: |
-          pytest --cov=sunweg --cov-report html --cov-report xml --junitxml=reports/junit/junit.xml
+          pytest --cov=midealocal --cov-report html --cov-report xml --junitxml=reports/junit/junit.xml
           mv htmlcov reports/coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
@@ -54,7 +54,7 @@ jobs:
         with:
           branch: badges
           folder: reports
-          token: ${{ secrets.SUNWEG_GITHUB_PAT }}
+          token: ${{ secrets.MIDEA_GITHUB_PAT }}
 
   deploy:
     runs-on: ubuntu-latest
