--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,7 +38,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --output-file ./reports/flake8/flake8stats.txt
       - name: Test with pytest
         run: |
-          pytest --cov=midealocal --cov-report html --cov-report xml --junitxml=reports/junit/junit.xml
+          python -m pytest --rootdir . --cov=midealocal --cov-report html --cov-report xml --junitxml=reports/junit/junit.xml ./tests/
           mv htmlcov reports/coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
