--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,5 +34,5 @@
     }
   },
   "remoteUser": "vscode",
-  "postAttachCommand": ["pip3 install --user -r requirements.txt"]
+  "postAttachCommand": ["pre-commit install"]
 }
