--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,5 +32,5 @@
     }
   },
   "remoteUser": "vscode",
-  "postAttachCommand": "pip3 install --user -r requirements.txt"
+  "postAttachCommand": "pre-commit install"
 }
