--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -8,10 +8,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         python-version: ["3.12", "3.11", "3.10"]
+        os: ["windows-latest", "ubuntu-latest", "macos-latest"]
 
     steps:
       - uses: actions/checkout@v3
