build: pre-commit hook

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -26,6 +26,8 @@ jobs:
           pip install flake8 pytest pytest-cov genbadge[all]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         shell: bash
+      - name: Pre-commit
+        uses: pre-commit/action@v3.0.1
       - name: Build midea-local
         run: |
           python -m build
