--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,40 +21,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov genbadge[all]
+          pip install pytest pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --output-file ./reports/flake8/flake8stats.txt
       - name: Test with pytest
         run: |
           python -m pytest --rootdir . --cov=midealocal --cov-report html --cov-report xml --junitxml=reports/junit/junit.xml ./tests/
           mv htmlcov reports/coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-      - name: Generate badges
-        if: github.event_name != 'pull_request'
-        run: |
-          genbadge tests -o reports/tests.svg
-          genbadge coverage -i coverage.xml -o reports/coverage.svg
-          genbadge flake8 -i reports/flake8/flake8stats.txt -o reports/flake8.svg
-      - name: Publish badges report to badges branch
-        uses: JamesIves/github-pages-deploy-action@v4
-        if: github.event_name != 'pull_request'
-        with:
-          branch: badges
-          folder: reports
-          token: ${{ secrets.MIDEA_GITHUB_PAT }}
 
   deploy:
     runs-on: ubuntu-latest
