--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,7 @@ disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
+
+[mypy-tests.*]
+disallow_untyped_decorators = false
+
