chore(ruff): skip S324 for security

--- a/ruff.toml
+++ b/ruff.toml
@@ -19,8 +19,11 @@ lint.ignore = [
 
 [lint.per-file-ignores]
 "library_test.py" = [
-    "PLR0915",   # Too many statements
-    "T201",      # `print` found
+    "PLR0915",  # Too many statements
+    "T201",     # `print` found
+]
+"midealocal/security.py" = [
+    "S324",     # Probable use of insecure hash functions in `hashlib`: `md5`
 ]
 "tests/*" = [
     "S101",     # Use of `assert` detected
