--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.12", "3.11", "3.10"]
+        python-version: ["3.11", "3.12"]
         os: ["windows-latest", "ubuntu-latest", "macos-latest"]
     env:
       SKIP: no-commit-to-branch
