--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-all.txt
+          python -m pip install -r requirements-all.txt
         shell: bash
       - name: Pre-commit
         uses: pre-commit/action@v3.0.1
