--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,14 @@
 {
-  "name": "Python 3",
-  "build": {
-    "dockerfile": "Dockerfile",
-    "context": "..",
-    "args": {
-      "VARIANT": "3.11-bullseye"
-    }
+  "name": "Midea Local Dev",
+  "context": "..",
+  "dockerFile": "Dockerfile",
+  "postCreateCommand": "scripts/setup.sh",
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   },
+  "runArgs": ["-e", "GIT_EDITOR=code --wait"],
   "customizations": {
     "vscode": {
-      "settings": {
-        "editor.formatOnPaste": false,
-        "editor.formatOnSave": true,
-        "editor.formatOnType": true,
-        "python.formatting.provider": "charliermarsh.ruff",
-        "python.testing.pytestArgs": ["tests"],
-        "python.testing.pytestEnabled": true,
-        "python.testing.unittestEnabled": false,
-        "pylint.args": [],
-        "files.trimTrailingWhitespace": true
-      },
       "extensions": [
         "charliermarsh.ruff",
         "ms-python.pylint",
@@ -28,9 +17,26 @@
         "redhat.vscode-yaml",
         "esbenp.prettier-vscode",
         "GitHub.vscode-pull-request-github"
-      ]
+      ],
+      "settings": {
+        "python.experiments.optOutFrom": ["pythonTestAdapter"],
+        "python.terminal.activateEnvInCurrentTerminal": true,
+        "python.testing.pytestArgs": ["--no-cov"],
+        "pylint.importStrategy": "fromEnvironment",
+        "editor.formatOnPaste": false,
+        "editor.formatOnSave": true,
+        "editor.formatOnType": true,
+        "files.trimTrailingWhitespace": true,
+        "terminal.integrated.profiles.linux": {
+          "zsh": {
+            "path": "/usr/bin/zsh"
+          }
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "[python]": {
+          "editor.defaultFormatter": "charliermarsh.ruff"
+        }
+      }
     }
-  },
-  "remoteUser": "vscode",
-  "postAttachCommand": "pre-commit install"
+  }
 }
