--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,8 @@
 name: "Lint PR"
 
-on: pull_request
+on:
+  pull_request:
+    types: [opened, edited, reopened]
 
 permissions:
   pull-requests: read
