--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -7,7 +7,15 @@ on:
     branches: ["main"]
 
 jobs:
+  commitlint:
+    name: Lint Commit Messages
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: wagoid/commitlint-github-action@v6.0.1
   build:
+    needs:
+      - commitlint
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
