chore: tag config of release-please

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,3 +17,5 @@ jobs:
         with:
           token: ${{ secrets.MIDEA_GITHUB_PAT }}
           release-type: python
+          include-v-in-tag: true
+          tag-separator: ""
