feat(cli)!: download protocol (#214)
Breaking change was introduced by #219 
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Enhanced Midea Local CLI with a new `MideaCLI` class for better
structure and functionality.
	- Added detailed logging configuration for better monitoring.

- **Bug Fixes**
- Improved data handling in `download_lua` to include model numbers
conditionally.

- **Documentation**
- Updated `.vscode/extensions.json` to recommend the
`vscode-coverage-gutters` extension.

- **Tests**
- Expanded test coverage for Midea Local CLI features, including cloud
interaction, device discovery, message sending, and more.

- **Chores**
- Updated `.gitignore` to exclude LUA protocol files and renamed library
configuration file.
- Modified `.vscode/settings.json` for enhanced test coverage reporting.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,10 @@ reports/
 # IDE
 .idea/
 
-# Optional config file for library_test.py script
+# Optional config file for library script
 library_test.json
 midea-local.json
+
+# LUA protocol implementation
+*.lua
+cov.xml
