--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ ci:
   autofix_commit_msg: "chore(pre-commit.ci): auto fixes"
   autoupdate_commit_msg: "chore(pre-commit.ci): pre-commit autoupdate"
   autoupdate_schedule: weekly
-  skip: [mypy]
+  skip: [mypy, pylint]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -56,3 +56,14 @@ repos:
         entry: mypy
         language: system
         types: [python]
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: system
+        types: [python]
+        args: [
+            "-rn", # Only display messages
+            "-sn", # Don't display the score
+            "--rcfile=pylintrc",
+            "--ignore-paths=tests",
+          ]
