chore: missing labels

--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -6,3 +6,5 @@ label-mapping:
   configuration: ["build", "ci"]
   documentation: ["docs"]
   enhancement: ["feat"]
+  misc: ["chore", "performance", "refactor", "style"]
+  test: ["test"]
