--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -16,6 +16,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   label-pr:
     runs-on: ubuntu-latest
+    if: ${{ !contains( github.event.pull_request.labels.*.name, 'autorelease') }}
     permissions:
       pull-requests: write
     steps:
