chore: pr label permission content

--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains( github.event.pull_request.labels.*.name, 'autorelease: pending') && !contains( github.event.pull_request.labels.*.name, 'autorelease: tagged')"
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - uses: grafana/pr-labeler-action@v0.1.0
