--- a/ruff.toml
+++ b/ruff.toml
@@ -11,6 +11,8 @@ lint.ignore = [
     "CPY001",   # Missing copyright notice at top of file
     "D203",     # 1 blank line required before class docstring
     "D213",     # Multi-line docstring summary should start at the second line
+    "DOC201",   # Docstring missing returns
+    "DOC501",   # Docstring missing raises
     "EM101",    # Exception must not use a string literal, assign to variable first
     "EM102",    # Exception must not use an f-string literal, assign to variable first
     "FBT001",   # Boolean-typed positional argument in function definition
