--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,11 +35,11 @@ repos:
       - id: check-xml
       - id: check-yaml
       - id: detect-private-key
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v4.0.0-alpha.8
-  #   hooks:
-  #     - id: prettier
-  #       args: ["--tab-width", "2"]
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        args: ["--tab-width", "2"]
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.17.0
     hooks:
