chore: disable coverage checks as PR still need test and confirm

--- a/codecov.yml
+++ b/codecov.yml
@@ -10,8 +10,8 @@ coverage:
         # The status context shown in GitHub (optional)
         name: Coverage Check
 
-github_checks:
-  annotations: false
+# temp disable codecoverage check as PRs still need test and confirm
+github_checks: false
 
 comment:
   layout: "reach, diff, flags, files"
