chore: disable coverage checks as PR still need test and confirm

--- a/codecov.yml
+++ b/codecov.yml
@@ -10,6 +10,7 @@ coverage:
         target: auto
         # The status context shown in GitHub (optional)
         name: Coverage Check
+      patch: false # PR comment for Git diff only
 
 comment:
   layout: "reach, diff, flags, files"
