--- a/codecov.yml
+++ b/codecov.yml
@@ -1,14 +1,15 @@
 coverage:
   status:
-    project:
-      default:
-        # Fail the build if the coverage decreases by more than 1%
-        threshold: 1%
-        # Set a minimum coverage percentage that must be met
-        target: 80%
-        # The status context shown in GitHub (optional)
-        name: Coverage Check
-
-comment:
-  layout: "reach, diff, flags, files"
-  behavior: default
+    patch: off
+    project: off
+    # project:
+    #   default:
+    #     # Fail the build if the coverage decreases by more than 1%
+    #     threshold: 1%
+    #     # Set a minimum coverage percentage that must be met
+    #     target: 80%
+    #     # The status context shown in GitHub (optional)
+    #     name: Coverage Check
+# comment:
+#  layout: "reach, diff, flags, files"
+#  behavior: default
