--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,13 @@
 {
   "name": "Midea Local Dev",
-  "context": "..",
-  "dockerFile": "Dockerfile",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "..",
+    "args": {
+      "APT_MIRROR_DOMAIN": "${localEnv:APT_MIRROR_DOMAIN:-deb.debian.org}",
+      "PIP_MIRROR_DOMAIN": "${localEnv:PIP_MIRROR_DOMAIN:-pypi.org}"
+    }
+  },
   "postCreateCommand": "scripts/setup.sh",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
